Lite version for Java 17