@@ -54,11 +54,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>16</source>
-                    <target>16</target>
-                    <fork>true</fork>
+                    <source>17</source>
+                    <target>17</target>
                     <compilerArgs>
-                        <arg>-J--illegal-access=debug</arg>
                         <arg>--enable-preview</arg>
                     </compilerArgs>
                 </configuration>
